--- a/index.html
+++ b/index.html
@@ -72,9 +72,15 @@
     <p><strong>Gib den Zugangscode ein:</strong></p>
     <input type="password" id="access" placeholder="Enter Access Code..." />
     <br />
-    <button onclick="checkPassword()" style="margin-top: 1rem; background:black; border:1px solid #00ffcc; color:#00ffcc; padding:0.5rem 1rem; cursor:pointer;">Öffnen</button>
-    <p style="margin-top: 2rem; font-size: 0.9rem;">This world is not what it seems. / Diese Welt ist nicht, was sie zu sein scheint.</p>
-    <p style="margin-top: 2rem; font-size: 0.9rem;"><a href="GEN4-Echo-Protokoll-1.pdf">&gt;&gt; Öffne Übertragungsfragment (GEN-4)</a></p>
+    <button onclick="checkPassword()" style="margin-top: 1rem; background:black; border:1px solid #00ffcc; color:#00ffcc; padding:0.5rem 1rem; cursor:pointer;">
+      Öffnen
+    </button>
+    <p style="margin-top: 2rem; font-size: 0.9rem;">
+      This world is not what it seems. / Diese Welt ist nicht, was sie zu sein scheint.
+    </p>
+    <p style="margin-top: 2rem; font-size: 0.9rem;">
+      <a href="GEN4-Echo-Protokoll-1.pdf">&gt;&gt; Öffne Übertragungsfragment (GEN-4)</a>
+    </p>
   </div>
 </body>
 </html>
