--- a/seek-the-noise.html
+++ b/seek-the-noise.html
@@ -88,5 +88,8 @@
   </div>
   <!-- Hidden GEN-4 message -->
   <!-- GEN-4://node/seek/init:frequency.43.auth -->
+<audio autoplay loop hidden>
+  <source src="GEN4-signal-numbers.mp3" type="audio/mpeg">
+</audio>
 </body>
 </html>
