--- a/seek-the-noise.html
+++ b/seek-the-noise.html
@@ -93,6 +93,9 @@
       <a href="GEN4-Echo-Protokoll-1.pdf">&gt;&gt; Lade GEN-4-Fragment herunter</a>
     </p>
     <p style="font-size: 0.8rem; margin-top: 2rem;">// Hinweis: Diese Seite existiert nicht offiziell</p>
+    <p style="margin-top: 2rem;">
+      <a href="#" onclick="playAudio()">[ Frequenz synchronisieren ]</a>
+    </p>
   </div>
 
   <audio id="gen4audio" loop hidden>
