--- a/delta-access.html
+++ b/delta-access.html
@@ -62,5 +62,10 @@
     <p><a href="GEN4-Archiv-Protokoll-2.pdf">&gt;&gt; Zugriff auf Protokoll 2</a></p>
     <p style="margin-top: 2rem; font-size: 0.8rem;">// Dieses Archiv wurde isoliert seit: [43.19.∆]</p>
   </div>
+
+  <audio id="deltaAudio" autoplay loop hidden>
+    <source src="GEN4-delta-signal.mp3" type="audio/mpeg">
+  </audio>
+
 </body>
 </html>
